--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3"
 
 services:
+  web:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    ports:
+      - "8000:8000"
+    links:
+      - db
+    volumes:
+     - ../../../../.:/go
   db:
     container_name: "ChallengeDB"
     image: "mysql:8"
